fixed consumed amount
